--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </a>
           <ul class="header-nav-list">
             <li class="header-nav-item">
-              <a class="header-nav-link" href="./index.html">Studio</a>
+              <a class="header-nav-link active" href="./index.html">Studio</a>
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link" href="">Portfolio</a>
@@ -406,73 +406,127 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list card-set">
             <li class="portfolio-item card-set-item">
-              <img
-                src="./images/bankingApp.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  src="./images/bankingApp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Banking App</h3>
                 <p class="portfolio-desc">App</p>
               </div>
             </li>
             <li class="portfolio-item card-set-item">
-              <img
-                src="./images/cashlessPayment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  src="./images/cashlessPayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Cashless Payment</h3>
                 <p class="portfolio-desc">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item card-set-item">
-              <img
-                src="./images/meditationApp.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  src="./images/meditationApp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Meditation App</h3>
                 <p class="portfolio-desc">App</p>
               </div>
             </li>
             <li class="portfolio-item card-set-item">
-              <img
-                src="./images/taxiService.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  src="./images/taxiService.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Taxi Service</h3>
                 <p class="portfolio-desc">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item card-set-item">
-              <img
-                src="./images/screenIllustrations.jpg"
-                alt="Screen
+              <div class="portfolio-wrapper">
+                <img
+                  src="./images/screenIllustrations.jpg"
+                  alt="Screen
             Illustrations"
-                width="360"
-                height="300"
-              />
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Screen Illustrations</h3>
                 <p class="portfolio-desc">Design</p>
               </div>
             </li>
             <li class="portfolio-item card-set-item">
-              <img
-                src="./images/onlineCourses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-wrapper">
+                <img
+                  src="./images/onlineCourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Online Courses</h3>
                 <p class="portfolio-desc">Marketing</p>
@@ -498,8 +552,8 @@
         </div>
         <div class="footer-socials">
           <p class="footer-socials-title">Social media</p>
-          <ul class="socials">
-            <li class="socials-item">
+          <ul class="footer-socials socials">
+            <li class="footer-socials-item socials-item">
               <a
                 class="socials-link"
                 href="https://instagram.com"
@@ -512,7 +566,7 @@
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
+            <li class="footer-socials-item socials-item">
               <a
                 class="socials-link"
                 href="https://twitter.com"
@@ -525,7 +579,7 @@
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
+            <li class="footer-socials-item socials-item">
               <a
                 class="socials-link"
                 href="https://facebook.com"
@@ -538,7 +592,7 @@
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
+            <li class="footer-socials-item socials-item">
               <a
                 class="socials-link"
                 href="https://linkedin.com/"
