--- a/index.html
+++ b/index.html
@@ -413,13 +413,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Banking App</h3>
@@ -434,13 +432,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Cashless Payment</h3>
@@ -455,13 +451,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Meditation App</h3>
@@ -476,13 +470,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Taxi Service</h3>
@@ -498,13 +490,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Screen Illustrations</h3>
@@ -519,13 +509,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-data">
                 <h3 class="portfolio-caption">Online Courses</h3>
@@ -552,10 +540,10 @@
         </div>
         <div class="footer-socials">
           <p class="footer-socials-title">Social media</p>
-          <ul class="footer-socials socials">
+          <ul class="footer-socials-list socials">
             <li class="footer-socials-item socials-item">
               <a
-                class="socials-link"
+                class="footer-socials-link socials-link"
                 href="https://instagram.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -568,7 +556,7 @@
             </li>
             <li class="footer-socials-item socials-item">
               <a
-                class="socials-link"
+                class="footer-socials-link socials-link"
                 href="https://twitter.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -581,7 +569,7 @@
             </li>
             <li class="footer-socials-item socials-item">
               <a
-                class="socials-link"
+                class="footer-socials-link socials-link"
                 href="https://facebook.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -594,7 +582,7 @@
             </li>
             <li class="footer-socials-item socials-item">
               <a
-                class="socials-link"
+                class="footer-socials-link socials-link"
                 href="https://linkedin.com/"
                 target="_blank"
                 rel="noopener noreferrer"
